Perkin-UAT/force-app/main/default/objects/SVMX_PS_ES_Template_Settings__c/SVMX_PS_ES_Template_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will store all email templates per record type required for emailing the service report</description>
    <label>Email Template Settings</label>
</CustomObject>