Perkin-UAT/force-app/main/default/objects/SVMX_PS_ES_Template_Settings__c/fields/SVMX_PS_ES_Default__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_ES_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</description>
    <inlineHelpText>This field defines if the Org Wide Address is default and can be used for any object for which no org wide address is found</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>