Perkin-UAT/force-app/main/default/objects/SVMX_PS_ES_Template_Settings__c/fields/SVMX_PS_ES_Service_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_ES_Service_Report_Name__c</fullName>
    <description>This field specifies service report name where the templates need to be used</description>
    <inlineHelpText>This field specifies service report name where the templates need to be used</inlineHelpText>
    <label>Service Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>