Perkin-UAT/force-app/main/default/objects/SVMX_PS_ES_Template_Settings__c/fields/SVMX_PS_ES_Template_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_ES_Template_Unique_Name__c</fullName>
    <description>This field carries the name of Template to be used while sending email</description>
    <inlineHelpText>This field carries the name of Template to be used while sending email</inlineHelpText>
    <label>Template Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>